--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -203,7 +203,7 @@ rules:
   no-labels: error
   no-lone-blocks: error
   no-lonely-if: error
-  no-loop-func: error
+  no-loop-func: off
   no-magic-numbers: off
   no-mixed-operators:
     - error
