--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "irc-colors": "^1.4.0",
-    "junkyard-brawl": "~0.2.1"
+    "junkyard-brawl": "^0.3.0"
   },
   "keywords": [
     "brawl",
